@@ -589,7 +589,8 @@ cachedb_intcache_lookup(struct module_qstate* qstate)
 		qstate->region, qstate->env->scratch,
 		1 /* no partial messages with only a CNAME */
 		);
-	if(!msg && qstate->env->neg_cache) {
+	if(!msg && qstate->env->neg_cache &&
+		iter_qname_indicates_dnssec(qstate->env, &iq->qchase)) {
 		/* lookup in negative cache; may result in 
 		 * NOERROR/NODATA or NXDOMAIN answers that need validation */
 		msg = val_neg_getmsg(qstate->env->neg_cache, &qstate->qinfo,
