@@ -1,3 +1,7 @@
+21 March 2018: Ralph
+	- Do use cached NSEC records to generate negative answers for domains
+	  under DNSSEC Negative Trust Anchors.
+
 19 March 2018: Wouter
 	- iana port update.
 
